# RETICOLO_mcp

./: .gitignore  MANIFEST.in  NOTICE  README.md  README_CN.md  pyproject.toml
reticolo_v10/reticolo_allege_v10/: retu.m
scripts/: audit_external_evidence.py  build_release.py  verify_installed_transport.py
src/reticolo_mcp/: __init__.py  capabilities.py  config.py  config_hash.py  convergence.py  durable_io.py  engine.py  evidence_audit.py  field_export.py  jobs.py  lease.py  resources.py  schema.py  server.py  sweep.py  worker.py
src/reticolo_mcp/tests/: g0_gate.py  g1_smoke.py  g2_baseline.py  g3_integration.py  g3_quick.py
tests/: __init__.py  conftest.py  test_capabilities.py  test_config_hash.py  test_convergence.py  test_durable_io.py  test_engine.py  test_evidence_audit.py  test_field_export.py  test_jobs.py  test_lease.py  test_packaging.py  test_resources.py  test_schema.py  test_server.py  test_sweep.py  test_verify_installed_transport.py  test_worker.py
