[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[project]
name = "reticolo-mcp"
version = "0.2.0.dev1"
description = "MCP server for RETICOLO V10 RCWA solver via MATLAB Engine API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.28",
    "numpy>=1.26",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

# reticolo_v10/ is NOT included in the wheel.
# It is CC-BY 4.0 licensed (different from the MIT wrapper).
# Users must clone the repository or set RETICOLO_MCP_DIR to a local
# RETICOLO V10 installation. See README and NOTICE.
